--- a/jobrequest/templates/task_request_list.html
+++ b/jobrequest/templates/task_request_list.html
@@ -3,6 +3,8 @@
 {% block title %}Personel Talep Listesi{% endblock %}
 
 {% block content %}
+<li><a href="{% url 'create_task_request' %}" class="btn btn-warning btn-sm">İş Talebi Oluştur</a></li>
+
 <h1 class="text-primary">Personel Talep Listesi</h1>
 <table class="table table-bordered">
     <thead>
