--- a/jobrequest/templates/assign_candidates.html
+++ b/jobrequest/templates/assign_candidates.html
@@ -37,10 +37,9 @@
     </style>
 </head>
 <body class="container py-4">
+    <!-- Başlık -->
     <h1 class="text-primary">
-        {{ job_request.position_name }} -
-        {{ job_request.location }} -
-        {{ job_request.organization }}
+        {{ job_request.position_name }} - {{ job_request.location }} - {{ job_request.organization }}
     </h1>
 
     <!-- Aday Ekleme Formu -->
@@ -49,7 +48,9 @@
         <input type="hidden" name="candidates" id="hidden-candidates">
 
         <!-- Aday Listesini Göster -->
-        <button type="button" class="btn btn-primary mb-3" onclick="toggleCandidateList()">Adayları Seç</button>
+        <div class="mb-3">
+            <button type="button" class="btn btn-primary" onclick="toggleCandidateList()">Adayları Seç</button>
+        </div>
         <div id="candidate-list" class="border rounded p-3">
             {% for candidate in all_candidates %}
             <div class="candidate-item" id="candidate-{{ candidate.id }}">
@@ -65,9 +66,11 @@
             <ul id="selected-candidates-list" class="list-group"></ul>
         </div>
 
+        <!-- Kaydet Butonu -->
         <button type="submit" class="btn btn-success mt-3">Kaydet</button>
     </form>
 
+    <!-- JavaScript -->
     <script src="/static/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script>
         let selectedCandidates = [];
