--- a/hr/templates/hr_profile.html
+++ b/hr/templates/hr_profile.html
@@ -18,7 +18,8 @@
                         <!-- Profile Picture -->
                         <div class="col-lg-4">
                             <div class="card mb-3">
-                                <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4" src="{{ user.profile_picture.url }}" alt="Profile Picture" width="160" height="160" />
+                                <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4" src="/static/img/avatars/avatar3.jpeg" alt="Profile Picture" width="160" height="160" />
+{#                                <div class="card-body text-center shadow"><img class="rounded-circle mb-3 mt-4" src="{{ user.profile_picture.url }}" alt="Profile Picture" width="160" height="160" />#}
                                     <div class="mb-3"><button class="btn btn-primary btn-sm" type="button">Change Photo</button></div>
                                 </div>
                             </div>
