--- a/jobrequest/templates/base.html
+++ b/jobrequest/templates/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="{% static 'bootstrap/css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i&display=swap">
     <link rel="stylesheet" href="{% static 'fonts/fontawesome-all.min.css' %}">
+    <link rel="shortcut icon" href="{% static "img/faviconV2.png" %}" />
     <style>
         .btn {
             padding: 10px 20px;
